agrego router dom y swr

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
+    "react-router-dom": "^6.8.2",
+    "swr": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
