--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-router-dom": "^6.8.2",
+    "styled-components": "^5.3.8",
     "swr": "^2.1.0"
   },
   "devDependencies": {
